# project-manager-cli

./: Cargo.toml  DEMO.md  OPTIMIZATION_DEMO.md  README.md  TUI_CACHE_FIX.md  install.sh
.claude/: settings.local.json
.github/workflows/: release.yml
examples/: cache_demo.rs  gitignore_test.rs  tui_cache_test.rs
src/: cli.rs  lib.rs  main.rs
src/config/: defaults.rs  mod.rs  settings.rs
src/models/: mod.rs  project.rs  scan_result.rs
src/operations/: cleanup.rs  mod.rs  project_manager.rs
src/scanner/: file_walker.rs  git_analyzer.rs  git_ignore_analyzer.rs  mod.rs  parallel_file_walker.rs  project_detector.rs  size_cache.rs  size_calculator.rs
src/tui/: app.rs  events.rs  mod.rs
src/tui/components/: mod.rs
src/tui/screens/: main_screen.rs  mod.rs
src/utils/: mod.rs  size_format.rs  time_format.rs
tests/: integration_test.rs
